--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -3,18 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav"
-    app:startDestination="@id/introFragment1">
+    app:startDestination="@id/coinListFragment">
+
     <fragment
-        android:id="@+id/introFragment1"
-        android:name="com.myungwoo.gettiming_app.view.fragment.IntroFragment1"
-        android:label="fragment_intro1"
-        tools:layout="@layout/fragment_intro1" >
-        <action
-            android:id="@+id/action_IntroFragment1_to_introFragment2"
-            app:destination="@id/introFragment2" />
-    </fragment>
+        android:id="@+id/coinListFragment"
+        android:name="com.myungwoo.gettiming_app.view.fragment.CoinListFragment"
+        android:label="fragment_coin_list"
+        tools:layout="@layout/fragment_coin_list" />
     <fragment
-        android:id="@+id/introFragment2"
-        android:name="com.myungwoo.gettiming_app.view.fragment.IntroFragment2"
-        android:label="IntroFragment2" />
+        android:id="@+id/priceChangeFragment"
+        android:name="com.myungwoo.gettiming_app.view.fragment.PriceChangeFragment"
+        android:label="fragment_price_change"
+        tools:layout="@layout/fragment_price_change" />
 </navigation>
