--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFEB3B</color>
     <color name="orange">#FFC107</color>
+    <color name="red">#FF0000</color>
+    <color name="blue">#0096FF</color>
 </resources>
