--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar_setting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/orange"
+        android:background="#F5F5F5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -52,7 +52,7 @@
                 android:id="@+id/startForeground"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/blue"
+                android:backgroundTint="@color/blue"
                 android:text="시작"
                 android:textColor="@color/white"
                 android:textStyle="bold"
@@ -69,7 +69,7 @@
                 android:text="종료"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:background="@color/red"
+                android:backgroundTint="@color/red"
                 android:layout_marginRight="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
