--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,6 +8,6 @@
 
     <item
         android:id="@+id/priceChangeFragment"
-        android:title="코인리스트"
+        android:title="가격 리스트"
         android:icon="@drawable/ic_baseline_access_alarms_24"/>
 </menu>
