--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFEB3B</color>
-    <color name="orange">#FFC107</color>
+    <color name="orange">#8C7DF7</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0096FF</color>
 </resources>
